--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				</section>
 
 				<!-- Project Banner -->
-				<section id="projects" class="wrapper style6 special">
+				<section id="projects" class="wrapper special">
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
@@ -159,7 +159,7 @@
 					</div>
 				</section>
 				<!-- Projects -->
-					<section id="projects1" class="wrapper alt style2 ">
+					<section id="projects1" class="wrapper alt style2">
 						<section class="spotlight mainproj">
 							<div class="image"><img src="images/passSafe/project.png" alt="PassSafe" /></div>
 							<div class="content">
