--- a/passsafe.html
+++ b/passsafe.html
@@ -66,7 +66,7 @@
 							<b>9.</b> Bug reports will be worked upon with high priority<br><br>
 
 							<h3> Walkthrough of PassSafe</h3>
-								<iframe width="1100" height="600" src="https://www.youtube.com/embed/MIc3TZZdX4U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe style="width:100%" src="https://www.youtube.com/embed/MIc3TZZdX4U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							<hr>
 							
 							<h3> Downloads: </h3>
