added clash website

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 									<h2>Clash Royale Character Profile</h2>
 									<p>First HTML project that I did, and with a more personal touch. Game theme used to create a brief storyline
 										using javascript events and audio, ultimately leading up to a character profile with even more features. </p>
-										<p>Click <a href="clash/index.html" target="_blank">here</a> for the wild experience!</p>
+										<p>Click <a href="clash/clash.html" target="_blank">here</a> for the wild experience!</p>
 									<br>
 										<ul class="icons major icon_grid">
 										<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
