--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							<p> Software development is something that I have loved doing since young, and have always<br>
 								planned to pursue the technological world as a career. Not only do I enjoy developing elegant and <br>
 								efficient software, designing websites and video editing are also things which I love doing. </p><br>
-							<p class="tools"> Favourite Tools for Development</p> <br>
+							<p class="tools"> Tools I use for Development</p> <br>
 							<ul class="icons major icon_grid">
 								<li class="icons">
 									<span class="icon brands fa-python major"></span>
@@ -155,22 +155,34 @@
 									<div class="tooltip">JScript</div>
 								</li>					
 							</ul>
-							<p class="tools"> Favourite Tools for Content Creation </p> <br>
+							<p class="tools"> Tools I use for Content Creation </p> <br>
 							<ul class="icons major icon_grid">
-								<li class="icons">
-									<span class="icon major">
-										<img class="pp" src="images/pp.png">
-									</span>
-									<div class="tooltip">Adobe Premie Pro CC</div>
-								</li>
 								<li class="icons">
 									<span class="icon major">
 										<img class="ps" src="images/ps.png">
 									</span>
 									<div class="tooltip">Adobe Photoshop CS6</div>
 								</li>
+								<li class="icons">
+									<span class="icon major">
+										<img class="aud" src="images/audacity.png">
+									</span>
+									<div class="tooltip">Audacity</div>
+								</li>
+								<li class="icons">
+									<span class="icon major">
+										<img class="cam" src="images/camtasia.png">
+									</span>
+									<div class="tooltip">Camtasia Studio 6</div>
+								</li>
+								<li class="icons">
+									<span class="icon major">
+										<img class="pp" src="images/pp.png">
+									</span>
+									<div class="tooltip">Adobe Premie Pro CC</div>
+								</li>
 							</ul>
-						<p>Of course, I can't call myself a tech guy without some of these projects so here are some of mine. </p>
+						<p>Of course, I can't call myself a tech guy without some of these projects so here are some of my favourites. </p>
 					</header>
 					</div>
 				</section>
@@ -219,6 +231,41 @@
 							<section class="spotlight">
 								<div class="image"><img src="images/projects/hog.png" alt="Clash Royale HTML" /></div><div class="content">
 									<h2>Clash Royale Character Profile</h2>
+									<p>First HTML project that I did, and with a more personal touch. Game theme used to create a brief storyline
+										using javascript events and audio, ultimately leading up to a character profile with even more features. </p>
+										<p>Click <a href="clash/clash.html" target="_blank">here</a> for the wild experience!</p>
+									<br>
+										<ul class="icons major icon_grid">
+										<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+										<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
+										<li><span class="icon solid fa-flask major"></span></li>
+										<li><span class="icon brands fa-python major"><span class="label">Python</span></span></li>
+									</ul>
+								</div>
+							</section>
+							<section class="spotlight">
+								<div class="image"><img src="images/projects/site.png" alt="Personal Site" /></div><div class="content">
+									<h2>Personal Site</h2>
+									<p>Wait.. that's this site!</p>
+									<br>
+									<ul class="icons major icon_grid">
+										<li><span class="icon brands fa-html5 major"><span class="label">HTML</span></span></li>
+										<li><span class="icon brands fa-js major"><span class="label">Javascript</span></span></li>
+										<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
+									</ul>
+								</div>
+							</section>
+						</section>
+					
+					<!--  Third Projects -->
+					<section id="software" class="wrapper style1 special projheads">
+						<h2> Video Editing </h2>
+					</section>
+					<!-- Projects -->
+						<section id="projects3" class="wrapper alt style2">
+							<section class="spotlight">
+								<div class="image"><img src="images/projects/hog.png" alt="Clash Royale HTML" /></div><div class="content">
+									<h2>Social Media</h2>
 									<p>First HTML project that I did, and with a more personal touch. Game theme used to create a brief storyline
 										using javascript events and audio, ultimately leading up to a character profile with even more features. </p>
 										<p>Click <a href="clash/clash.html" target="_blank">here</a> for the wild experience!</p>
