added Google Play link
Signed-off-by: ikee <85350135+ikeawesom@users.noreply.github.com>

--- a/passsafe.html
+++ b/passsafe.html
@@ -71,7 +71,7 @@
 							
 							<h3> Downloads: </h3>
 							<a class="download" href="https://github.com/W-Appz/PassSafe/releases/latest" target="_blank"><img class="dbutton" src="images/publications/github.png" alt="Download from Github icon" width="300"/></a>   
-							<a class="download" onclick="soon()"><img class="d1button" src="images/publications/googleplay.png" alt="Download from Play Store" width="300"/></a>
+							<a class="download" href="https://play.google.com/store/apps/details?id=com.WAppz.PassSafe" target="_blank"><img class="dbutton" src="images/publications/googleplay.png" alt="Download from Play Store" width="300"/></a>
 							<a class="download" onclick="soon()"><img class="d1button" src="images/publications/appstore.png" alt="Download from Apple Store" width="300"/></a><br><br>
 							<script>
 								function soon() {
