--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 											<li><a class="more scrolly" href="#about">About Me</a></li>
 											<li><a class="more scrolly" href="#projects">Projects</a></li>
 											<li><a href="passsafe.html">PassSafe</a></li>
+                                                                                        <li><a href="https://patreon.com/ikeawesom" target="_blank">Support Me</a></li>
 										</ul>
 									</div>
 								</li>
