added smu award

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 									<p> Technological Council EXCO 2021 - 2022</p>
 									<p> 2021 - Present</p>
 								</li>
+								<li class="icon solid fa-award">
+									<h3>SMU Award</h3>
+									<p class="sub">Singapore Management University</p>
+									<p> Computing @ SMU Award:<br>
+										Outstanding academic performance and passion in computing  (October 2022)</p>
+								</li>
 								<li class="icon solid fa-laptop-code">
 									<h3>Sentinels</h3>
 									<p class="sub">Ministry of Defence (MINDEF), SAFC4I</p>
@@ -96,7 +102,7 @@
 									<p class="sub">University of Waterloo</p>
 									<p>Distinction in junior category (February 2022)</p>
 								</li>
-								<li class="icon solid fa-code lastli">
+								<li class="icon solid fa-code">
 									<h3>Artificial Intelligence</h3>
 									<p class="sub">Codeavour</p>
 									<p>A.I. course using PictoBlox (November 2021)</p>
