added unity game
Signed-off-by: W-Laboratories <ikebusinessoff@gmail.com>

--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
 								<li class="icons">
 									<span class="icon brands fa-js major"></span>
 									<div class="tooltip">JScript</div>
-								</li>					
+								</li>	
+								<li class="icons">
+									<span class="icon brands fa-unity major"></span>
+									<div class="tooltip">Unity</div>
+								</li>		
 							</ul>
 							<p class="tools"> Tools I use for Content Creation </p> <br>
 							<ul class="icons major icon_grid">
@@ -211,6 +215,18 @@
 									<li><span class="icon brands fa-android major"><span class="label">Android</span></span></li>
 									<li><span class="icon brands fa-java major"><span class="label">Java</span></span></li>
 									<li><span class="icon brands fa-github major"><span class="label">Github</span></span></li>
+								</ul>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/projects/zombie.png" alt="Zombie Kill Game" /></div><div class="content">
+								<h2>Zombie Kill Game</h2>
+								<p>First Unity game I developed! Just a side project I did during the holidays in my spare time and it definitely needs more work. Not the best but I am quite proud of it considering it was my first <br>
+									time developing using Unity. </p>
+									<p> Click <a href="https://www.youtube.com/watch?v=aAOSB6Tv7Dg" target="_blank">here</a> to witness some epic gameplay! </p>
+								<br>
+								<ul class="icons major icon_grid">
+									<li><span class="icon brands fa-unity major"></span></li>
 								</ul>
 							</div>
 						</section>
