--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Projects</h2>
-							<p> Software development is something that I have loved doing since young, and have always<br>
-								planned to pursue the technological world as a career. Not only do I enjoy developing elegant and <br>
-								efficient software, designing websites and video editing are also things which I love doing. </p><br>
+							<p> Software development and cybersecurity is something that I have loved doing since young, and have always
+								planned to pursue the technological world as a career. Not only do I enjoy the realm of cybersecurity, developing elegant and
+								efficient software and websites along with video editing are also things which I love. </p><br>
 							<p class="tools"> Tools I use for Development</p> <br>
 							<ul class="icons major icon_grid">
 								<li class="icons">
